*** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***

* SNAPSHOT August 09, 2016
  * Upstream 2016-04-13
  * [PX7] Add movie loader for LD, but not tested enough yet.
  * [MOVIE_SAVER/OpenGL] Add locking around drawing buffer.
  * [BUILD] Update FFMPEG to 3.1.1 .
  * [FFMPEG/LINUX] Enable OpenCL for ffmpeg @linux.You need libOpenCL.so.1 to use homebrew build.
  * [FFMPEG/WIN32] Enable DXVA2 for video-decoding accelerator.
  * [MOVIE_SAVER] Synchronous OPEN->ENCODEING->CLOSING.
  * [UI/MOVIE_SAVER] DO NOT change state of "Save as movie" without *real* starting/stopping.
  * [Draw/OpenGL] Optimize GLSL's by https://github.com/aras-p/glsl-optimizer .
  * Built with GIT fc7a03a9337287414e00777464ab273c4f44ea44 (or later) .
 
-- Aug 10, 2016 01:42:51 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT July 25, 2016
  * Upstream 2016-04-13
  * Bugfix only.
  * [Win32] Build with Qt5.7.0 and GCC-6.1 (cross).
  * [MOVIE_SAVER/OSD] Fix wrong framerate when recording ; this is related by frame skipping. Maybe fixed (3) of http://hanabi.2ch.net/test/read.cgi/i4004/1430836648/705
  * [MOVIE_SAVER/Qt] Fix duplicate opening before closing. Maybe fixed (5) of http://hanabi.2ch.net/test/read.cgi/i4004/1430836648/708 .
  * Build with 8265a0a859ac69ef7c17548851902eab2de6f7f4 (or later).
  
-- Jul 25, 2016 21:59:41 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT June 29, 2016
  * Upstream 2016-04-13
  * Build with FFMPEG 3.0.2 supported libmp3lame.
  * [MOVIE_SAVER/Win32] Fix wrong value of left frames for audio when stopping to record.
  * [OSD/Qt] Fix wrong FPS with not drawing.
  * Build with 3752c12b4b08f9910f3e3b6ad6f7dfbd76342cbb (or later).
  
-- Jun 29, 2016 13:05:15 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT June 21, 2016
  * Upstream 2016-04-13
  * Build with FFMPEG 3.0.2 supported libmp3lame.
  * [Linux] Build with qt.io's official Qt 5.3.1 expect to work with 
    Ubuntu 16.04 LTS and Debian 8 "Jessie".