@@ -1,6 +1,6 @@
 ** Qt porting and FM-7/77/AV/AV40/EX for Common Source Code Project **
 
-                                                         August 09, 2016
+                                                         August 15, 2016
                             K.Ohta  (whatisthis.sowhat _at_ gmail.com)
 
 1.About
@@ -9,7 +9,7 @@ This package is Qt5 porting of Common Source Code Project (CSP)
 and built with Qt5, for Windows, built with MinGW(32bit).
 
 Source Code:
-   https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20160809
+   https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20160815
    
 Additional INFO:
    Binaries will be available, distibute from osdn.jp.
@@ -82,6 +82,15 @@ Upstream (Takeda Toshiya San's original code)
 http://homepage3.nifty.com/takeda-toshiya/
 
 Changes:
+
+* SNAPSHOT August 15, 2016
+  * Upstream 2016-04-13
+  * [OSD][MOVIE_SAVER] Maybe correctness frame(s) counting with 60fps ヽ(=´▽=)ﾉ
+  * [MOVIE_SAVER] Fix sometimes crashing when stop to save movie.
+  * [PX7/MOVIE_LOADER] Sound Laser Disc, but not be smooth.
+  * Built with GIT 171d3309339e4b941d2bd13a3dd0c11840cfeb62 (or later) .
+ 
+-- Aug 15, 2016 23:35:43 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT August 09, 2016
   * Upstream 2016-04-13
