@@ -9,13 +9,13 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-08-09<BR>
-libCSPavio 2.2.0<BR>
+Qt Port and FM7 series 2016-08-15<BR>
+libCSPavio 2.3.0<BR>
 libCSPgui 2.0.1<BR>
-libCSPosd 2.1.0<BR>
+libCSPosd 2.2.0<BR>
 libCSPemu_utils 2.0.0<BR>
 FFMPEG 3.1.1 + liblame 3.99 + libx264-148<BR>
-Build Version: fc7a03a9337287414e00777464ab273c4f44ea44<BR>
+Build Version: 171d3309339e4b941d2bd13a3dd0c11840cfeb62<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -67,5 +67,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Wed 10 August, 2016 01:44:18<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon 15 August, 2016 23:38:01<!-- hhmts end -->
 </body> </html>
