@@ -1,5 +1,14 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT August 15, 2016
+  * Upstream 2016-04-13
+  * [OSD][MOVIE_SAVER] Maybe correctness frame(s) counting with 60fps ヽ(=´▽=)ﾉ
+  * [MOVIE_SAVER] Fix sometimes crashing when stop to save movie.
+  * [PX7/MOVIE_LOADER] Sound Laser Disc, but not be smooth.
+  * Built with GIT 171d3309339e4b941d2bd13a3dd0c11840cfeb62 (or later) .
+ 
+-- Aug 15, 2016 23:35:43 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT August 09, 2016
   * Upstream 2016-04-13
   * [PX7] Add movie loader for LD, but not tested enough yet.
